--- a/PR-5(movie-project)/views/bookticket.ejs
+++ b/PR-5(movie-project)/views/bookticket.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../uploads/tickets.png" type="image/x-icon">
     <title>Book your movie ticket</title>
     <style>
 
