--- a/PR-5(movie-project)/views/view.ejs
+++ b/PR-5(movie-project)/views/view.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../uploads/tickets.png" type="image/x-icon">
     <title>Book your movie ticket</title>
 
     <!-- Bootstrap CSS -->
