--- a/PR-6(blog project)/views/add.ejs
+++ b/PR-6(blog project)/views/add.ejs
@@ -165,14 +165,14 @@
                     <input type="number" class="form-control" id="price" name="price" required>
                 </div>
                 <div class="form-group">
-                    <label for="seats">Product Description</label>
-                    <input type="text" class="form-control" id="seats" name="seats" required>
+                    <label for="desc">Product description</label>
+                    <input type="text" class="form-control" id="desc" name="desc" required>
                 </div>
                 <div class="form-group">
-                    <label for="motype">Product Types</label>
-                    <select class="form-control" id="motype" name="motype" required>
+                    <label for="protype">Product Types</label>
+                    <select class="form-control" id="protype" name="protype" required>
                         <option>--Select Product Type--</option>
-                        <% const movieTypes = ["Makeup", "Grocery", "Jeans-Tshirt", "Footwear","Electronics", "Bags"]; movieTypes.forEach(type => { %>
+                        <% const proTypes = ["Makeup", "Grocery", "Jeans-Tshirt", "Footwear","Electronics", "Bags"]; proTypes.forEach(type => { %>
                         <option value="<%= type %>"><%= type %></option>
                         <% }) %>
                     </select>
