--- a/PR-8(admin panel)/views/dashboard.ejs
+++ b/PR-8(admin panel)/views/dashboard.ejs
@@ -1,3 +1,5 @@
+<%- include('header')%>
+
 <div class="page-wrapper">
     <!-- ============================================================== -->
     <!-- Bread crumb and right sidebar toggle -->
@@ -1249,4 +1251,6 @@
     <!-- ============================================================== -->
     <!-- End footer -->
     <!-- ============================================================== -->
-  </div>
+</div>
+
+<%- include('footer')%>
