--- a/PR-6(blog project)/views/login.ejs
+++ b/PR-6(blog project)/views/login.ejs
@@ -91,7 +91,7 @@
             <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
         <div class="form-footer">
-            <p>Don't have an account? <a href="/">Register Now</a></p>
+            <p>Don't have an account? <a href="/register">Register Now</a></p>
         </div>
     </div>
 
