--- a/PR-6(blog project)/views/register.ejs
+++ b/PR-6(blog project)/views/register.ejs
@@ -95,7 +95,7 @@
             <button type="submit" class="btn btn-primary btn-block">Register</button>
         </form>
         <div class="form-footer">
-            <p>Already have an account? <a href="/login">Log In</a></p>
+            <p>Already have an account? <a href="/">Log In</a></p>
         </div>
     </div>
 
