--- a/PR-7(login with blog project)/views/login.ejs
+++ b/PR-7(login with blog project)/views/login.ejs
@@ -72,7 +72,7 @@
                             </div>
                         </form>
                         <div class="text-center mt-3">
-                            <a href="/ragisterpage" class="text-blue-600 hover:underline">Register</a>
+                            <a href="/res" class="text-blue-600 hover:underline">Register</a>
                         </div>
                     </div>
                 </div>
