--- a/PR-7(login with blog project)/views/readmore.ejs
+++ b/PR-7(login with blog project)/views/readmore.ejs
@@ -92,7 +92,7 @@
         }
 
         .blog-name {
-            font-size: 1.8rem;
+            font-size: 19px;
             font-weight: bold;
             color: #6a11cb;
             margin-bottom: 15px;
@@ -125,8 +125,8 @@
                 <img src="/<%= single.image %>" alt="Current Image" class="img-fluid rounded">
             </div>
             <div class="card-body">
-                <div class="blog-name"><%= single.blogename %></div>
-                <div class="blog-description"><%= single.description %></div>
+                <div class="blog-name">Blog Name:<%= single.name %></div>
+                <div class="blog-description">Description:<%= single.description %></div>
             </div>
         </div>
     </div>
