--- a/PR-8(admin panel)/views/changePassword.ejs
+++ b/PR-8(admin panel)/views/changePassword.ejs
@@ -60,14 +60,19 @@
         "
       >
         <div class="auth-box bg-dark border-top border-secondary">
-          <div>
+          <div id="loginform">
             <div class="text-center pt-3 pb-3">
               <span class="db"
                 ><img src="../assets/images/logo.png" alt="logo"
               /></span>
             </div>
             <!-- Form -->
-            <form method="post" class="form-horizontal mt-3" action="/registeruser">
+             <h2 class="text-white">Change Password</h2>
+            <form method="post"
+              class="form-horizontal mt-3"
+              id="loginform"
+              action="/postChangepassword"
+            >
               <div class="row pb-4">
                 <div class="col-12">
                   <div class="input-group mb-3">
@@ -79,84 +84,54 @@
                       ></span>
                     </div>
                     <input
-                      type="text" name="name"
+                      type="text" name="oldpassword"
                       class="form-control form-control-lg"
-                      placeholder="Username"
+                      placeholder="Old password"
                       aria-label="Username"
                       aria-describedby="basic-addon1"
-                      required
+                      required=""
                     />
+                   
                   </div>
-                  <!-- email -->
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span
-                        class="input-group-text bg-danger text-white h-100"
+                        class="input-group-text bg-success text-white h-100"
                         id="basic-addon1"
-                        ><i class="mdi mdi-email fs-4"></i
+                        ><i class="mdi mdi-account fs-4"></i
                       ></span>
                     </div>
                     <input
-                      type="text" name="email"
+                      type="text" name="newpassword"
                       class="form-control form-control-lg"
-                      placeholder="Email Address"
+                      placeholder="New password"
                       aria-label="Username"
                       aria-describedby="basic-addon1"
-                      required
+                      required=""
                     />
+                   
                   </div>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span
-                        class="input-group-text bg-warning text-white h-100"
-                        id="basic-addon2"
-                        ><i class="mdi mdi-lock fs-4"></i
-                      ></span>
-                    </div>
-                    <input
-                      type="text" name="password"
-                      class="form-control form-control-lg"
-                      placeholder="Password"
-                      aria-label="Password"
-                      aria-describedby="basic-addon1"
-                      required
-                    />
-                  </div>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span
-                        class="input-group-text bg-info text-white h-100"
-                        id="basic-addon2"
-                        ><i class="mdi mdi-lock fs-4"></i
-                      ></span>
-                    </div>
-                    <input
-                      type="text" name="cpassword"
-                      class="form-control form-control-lg"
-                      placeholder=" Confirm Password"
-                      aria-label="Password"
-                      aria-describedby="basic-addon1"
-                      required
-                    />
-                  </div>
+                  <button
+                  class="btn btn-success float-end text-white"
+                  type="submit"
+                >
+                  Submit
+                </button>
                 </div>
               </div>
               <div class="row border-top border-secondary">
                 <div class="col-12">
                   <div class="form-group">
-                    <div class="pt-3 d-grid">
-                      <button
-                        class="btn btn-block btn-lg btn-info"
-                        type="submit"
-                      >
-                        Sign Up
-                      </button>
+                    <div class="pt-3">
+                     
+                     
                     </div>
                   </div>
                 </div>
               </div>
             </form>
           </div>
+         
         </div>
       </div>
       <!-- ============================================================== -->
@@ -184,8 +159,19 @@
     <!-- ============================================================== -->
     <!-- This page plugin js -->
     <!-- ============================================================== -->
-    <script>   
+    <script>
       $(".preloader").fadeOut();
+      // ==============================================================
+      // Login and Recover Password
+      // ==============================================================
+      $("#to-recover").on("click", function () {
+        $("#loginform").slideUp();
+        $("#recoverform").fadeIn();
+      });
+      $("#to-login").click(function () {
+        $("#recoverform").hide();
+        $("#loginform").fadeIn();
+      });
     </script>
   </body>
 </html>
