--- a/PR-8(admin panel)/views/header.ejs
+++ b/PR-8(admin panel)/views/header.ejs
@@ -349,9 +349,12 @@
                   class="dropdown-menu dropdown-menu-end user-dd animated"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="javascript:void(0)"
+                  <a class="dropdown-item" href="/myprofile"
                     ><i class="mdi mdi-account me-1 ms-1"></i> My Profile</a
                   >
+                  <a class="dropdown-item" href="/changepassword"
+                  ><i class="mdi mdi-account me-1 ms-1"></i> Change Password</a
+                >
                   <a class="dropdown-item" href="javascript:void(0)"
                     ><i class="mdi mdi-wallet me-1 ms-1"></i> My Balance</a
                   >
@@ -364,7 +367,7 @@
                     Setting</a
                   >
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="javascript:void(0)"
+                  <a class="dropdown-item" href="/logout"
                     ><i class="fa fa-power-off me-1 ms-1"></i> Logout</a
                   >
                   <div class="dropdown-divider"></div>
