--- a/PR-8(admin panel)/views/login.ejs
+++ b/PR-8(admin panel)/views/login.ejs
@@ -67,11 +67,10 @@
               /></span>
             </div>
             <!-- Form -->
-            <form
+            <form method="post"
               class="form-horizontal mt-3"
               id="loginform"
-              method="post"
-              action="/loginUser"
+              action="/loginuser"
             >
               <div class="row pb-4">
                 <div class="col-12">
@@ -84,11 +83,10 @@
                       ></span>
                     </div>
                     <input
-                      type="text"
+                      type="text" name="email"
                       class="form-control form-control-lg"
                       placeholder="Useremail"
                       aria-label="Username"
-                      name="email"
                       aria-describedby="basic-addon1"
                       required=""
                     />
@@ -102,11 +100,10 @@
                       ></span>
                     </div>
                     <input
-                      type="text"
+                      type="text" name="password"
                       class="form-control form-control-lg"
                       placeholder="Password"
                       aria-label="Password"
-                      name="password"
                       aria-describedby="basic-addon1"
                       required=""
                     />
@@ -145,7 +142,7 @@
             </div>
             <div class="row mt-3">
               <!-- Form -->
-              <form class="col-12" method="post" action="/forgotPassword">
+              <form class="col-12" method="post" action="/forgotpassword">
                 <!-- email -->
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
@@ -156,7 +153,7 @@
                     ></span>
                   </div>
                   <input
-                    type="text"
+                    type="text" name="useremail"
                     class="form-control form-control-lg"
                     placeholder="Email Address"
                     aria-label="Username"
