--- a/PR-8(admin panel)/views/login.ejs
+++ b/PR-8(admin panel)/views/login.ejs
@@ -127,6 +127,12 @@
                       >
                         Login
                       </button>
+                      <a
+                      class="btn btn-info me-2 float-end text-white"
+                      type="submit" href="/register"
+                    >
+                      Register
+                    </a>
                     </div>
                   </div>
                 </div>
