--- a/PR-8(admin panel)/views/add_category.ejs
+++ b/PR-8(admin panel)/views/add_category.ejs
@@ -36,7 +36,7 @@
           <div class="card">
             <form class="form-horizontal" method="post" action="/category/insertcategory">
               <div class="card-body">
-                <h4 class="card-title">Category</h4>
+                <h4 class="card-title">Add Category</h4>
                 <div class="form-group row">
                   <label
                     for="fname"
