--- a/PR-8(admin panel)/views/edit_category.ejs
+++ b/PR-8(admin panel)/views/edit_category.ejs
@@ -37,7 +37,7 @@
             <form class="form-horizontal" method="post" action="/category/updatecategory">
                 <input type="hidden" name="editid" value="<%= single.id %>">
               <div class="card-body">
-                <h4 class="card-title">Category</h4>
+                <h4 class="card-title">Edit Category</h4>
                 <div class="form-group row">
                   <label
                     for="fname"
