--- a/PR-8(admin panel)/views/view_category.ejs
+++ b/PR-8(admin panel)/views/view_category.ejs
@@ -40,9 +40,9 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th scope="col">No</th>
+                  <th scope="col">Category_No</th>
                   <th scope="col">Category_Name</th>
-                  <th scope="col">Action</th>
+                  <th scope="col">Actions</th>
                 </tr>
               </thead>
               <tbody>             
