--- a/PR-8(admin panel)/views/view_category.ejs
+++ b/PR-8(admin panel)/views/view_category.ejs
@@ -55,8 +55,8 @@
                             <td><%= cat.category_name %></td>
 
                             <td>
-                                <a class="btn-danger p-2 me-2" href="/category/deletecategory?id=<%= id %>">Delete</a>
-                                <a class="btn-success p-2 text-white" href="/category/editcategory?id=<%= id %>">Edit</a>
+                                <a class="btn btn-danger me-2" href="/category/deletecategory?id=<%= id %>">Delete</a>
+                                <a class="btn btn-success text-white" href="/category/editcategory?id=<%= id %>">Edit</a>
                             </td>
                         </tr>
                    <% }) %>
