--- a/PR-8(admin panel)/views/view_category.ejs
+++ b/PR-8(admin panel)/views/view_category.ejs
@@ -32,6 +32,14 @@
       <!-- Start Page Content -->
       <!-- ============================================================== -->
       <div class="row">
+
+        <div class="row">
+          <% if(locals.massage.danger) { %>
+            <div class="alert alert-danger" role="alert">
+              <%= locals.massage.danger %>
+            </div>
+          <% } %>
+
         <div class="col-12">
           <div class="card">
             <div class="card-body">
