--- a/PR-8(admin panel)/views/add_category.ejs
+++ b/PR-8(admin panel)/views/add_category.ejs
@@ -1,6 +1,6 @@
 <%- include('header')%>
 
-<div class="page-wrapper">
+  <div class="page-wrapper">
     <!-- ============================================================== -->
     <!-- Bread crumb and right sidebar toggle -->
     <!-- ============================================================== -->
@@ -32,39 +32,39 @@
       <!-- Start Page Content -->
       <!-- ============================================================== -->
       <div class="row">
-        <div class="col-md-6">
-          <div class="card">
-            <form class="form-horizontal" method="post" action="/category/insertcategory">
-              <div class="card-body">
-                <h4 class="card-title">Add Category</h4>
-                <div class="form-group row">
-                  <label
-                    for="fname"
-                    class="col-sm-3 text-end control-label col-form-label"
-                    >Category Name</label
-                  >
-                  <div class="col-sm-9">
-                    <input
-                      type="text" 
-                      class="form-control"
-                      id="fname" name="category"
-                      placeholder="Category Name"
-                    />
-                  </div>
-                </div>
-                
-              </div>
-              <div class="border-top">
-                <div class="card-body">
-                  <button type="submit" class="btn btn-primary">
-                    Submit
-                  </button>
-                </div>
-              </div>
-            </form>
+        <% if(locals.massage.success) { %>
+          <div class="alert alert-success" role="alert">
+            <%= locals.massage.success %>
           </div>
+        <% } %>
 
-        </div>
+
+
+            <div class="col-md-6">
+              <div class="card">
+                <form class="form-horizontal" method="post" action="/category/insertcategory">
+                  <div class="card-body">
+                    <h4 class="card-title">Add Category</h4>
+                    <div class="form-group row">
+                      <label for="fname" class="col-sm-3 text-end control-label col-form-label">Category Name</label>
+                      <div class="col-sm-9">
+                        <input type="text" class="form-control" id="fname" name="category"
+                          placeholder="Category Name" />
+                      </div>
+                    </div>
+
+                  </div>
+                  <div class="border-top">
+                    <div class="card-body">
+                      <button type="submit" class="btn btn-primary">
+                        Submit
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+
+            </div>
 
       </div>
       <!-- editor -->
@@ -95,4 +95,4 @@
     <!-- ============================================================== -->
   </div>
 
-<%- include('footer')%>
+  <%- include('footer')%>
