--- a/PR-8(admin panel)/views/header.ejs
+++ b/PR-8(admin panel)/views/header.ejs
@@ -399,6 +399,8 @@
           <!-- Sidebar navigation-->
           <nav class="sidebar-nav">
             <ul id="sidebarnav" class="pt-4">
+
+              <!-- dashboard -->
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
@@ -408,6 +410,8 @@
                   ><span class="hide-menu">Dashboard</span></a
                 >
               </li>
+
+              <!-- category -->
               <li class="sidebar-item">
                 <a
                   class="sidebar-link has-arrow waves-effect waves-dark"
@@ -427,6 +431,31 @@
                     <a href="/category/viewcategory" class="sidebar-link"
                       ><i class="mdi mdi-note-plus"></i
                       ><span class="hide-menu"> View Category </span></a
+                    >
+                  </li>
+                </ul>
+              </li>
+
+              <!-- subcategory -->
+              <li class="sidebar-item">
+                <a
+                  class="sidebar-link has-arrow waves-effect waves-dark"
+                  href="javascript:void(0)"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-receipt"></i
+                  ><span class="hide-menu">Subcategory </span></a
+                >
+                <ul aria-expanded="false" class="collapse first-level">
+                  <li class="sidebar-item">
+                    <a href="/subcategory/addsubcategory" class="sidebar-link"
+                      ><i class="mdi mdi-note-outline"></i
+                      ><span class="hide-menu"> Add Subcategory </span></a
+                    >
+                  </li>
+                  <li class="sidebar-item">
+                    <a href="/subcategory" class="sidebar-link"
+                      ><i class="mdi mdi-note-plus"></i
+                      ><span class="hide-menu"> View Subcategory </span></a
                     >
                   </li>
                 </ul>
