--- a/PR-8(admin panel)/views/edit_subcategory.ejs
+++ b/PR-8(admin panel)/views/edit_subcategory.ejs
@@ -51,7 +51,7 @@
                         <select name="category" class="form-control">
                           <option>--select category--</option>
                           <% category.map((ca)=>{ %>
-                            <option value="<%= ca.id %>"><%= ca.category_name %></option>
+                            <option><%= ca.category_name %></option>
                           <% }) %>
                         </select>  
                       </div>
