--- a/PR-8(admin panel)/views/view_category.ejs
+++ b/PR-8(admin panel)/views/view_category.ejs
@@ -69,7 +69,7 @@
 
                           <td>
                             <a class="btn btn-danger me-2" href="/category/deletecategory?id=<%= cat.id %>">Delete</a>
-                            <a class="btn btn-success text-white" href="/category/editcategory?id=<%= cat.id %>">Edit</a>
+                            <a class="btn btn-info text-white" href="/category/editcategory?id=<%= cat.id %>">Edit</a>
                           </td>
 
                           <td>
@@ -83,6 +83,7 @@
                                 </a>
                                 <% } %>
                           </td>
+                          
                         </tr>
                         <% }) %>
                     </tbody>
