--- a/PR-8(admin panel)/views/header.ejs
+++ b/PR-8(admin panel)/views/header.ejs
@@ -461,6 +461,30 @@
                 </ul>
               </li>
              
+              <!-- exsubcategory -->
+              <li class="sidebar-item">
+                <a
+                  class="sidebar-link has-arrow waves-effect waves-dark"
+                  href="javascript:void(0)"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-receipt"></i
+                  ><span class="hide-menu">Exsubcategory </span></a
+                >
+                <ul aria-expanded="false" class="collapse first-level">
+                  <li class="sidebar-item">
+                    <a href="/exsubcategory/exaddsubcategory" class="sidebar-link"
+                      ><i class="mdi mdi-note-outline"></i
+                      ><span class="hide-menu"> Add Exsubcategory </span></a
+                    >
+                  </li>
+                  <li class="sidebar-item">
+                    <a href="/exsubcategory" class="sidebar-link"
+                      ><i class="mdi mdi-note-plus"></i
+                      ><span class="hide-menu"> View Exsubcategory </span></a
+                    >
+                  </li>
+                </ul>
+              </li>
                 </ul>
               </li>
              
