--- a/PR-8(admin panel)/views/edit_exsubcategory.ejs
+++ b/PR-8(admin panel)/views/edit_exsubcategory.ejs
@@ -42,20 +42,20 @@
 
             <div class="col-md-6">
               <div class="card">
-                <form class="form-horizontal" method="post" action="/exsubcategory/insertexsubcategory">
+                <form class="form-horizontal" method="post" action="/exsubcategory/updateexsubcategory">
                   <div class="card-body">
-                    <h4 class="card-title">Add Exsubcategory</h4>
+                    <h4 class="card-title">Edit Exsubcategory</h4>
                     <div class="form-group row">
                       <label for="fname" class="col-sm-3 text-end control-label col-form-label">Category</label>
                       <div class="col-sm-9">
-                        <select name="category" class="form-control">
-                          <option>--select category--</option>
-                          <% category.map((ca)=>{ %>
-                            <option value="<%= ca.id %>"<% if(category.categoryId.category_name == ca.category_name) { %> selected <% } %> value="<%= ca.id %>"><%= ca.category_name %></option>
+                        <select name="subcategory" class="form-control">
+                          <option>--select subcategory--</option>
+                          <% category.map((scat)=>{ %>
+                            <option value="<%= scat.id %>"<% if(single.categoryId.category_name == scat.category_name) { %> selected <% } %> value="<%= scat.id %>"><%= scat.category_name %></option>
                           <% }) %>
                         </select>   
                       </div>
-                    </div>
+                    </div>   
 
                     <div class="form-group row">
                         <label for="fname" class="col-sm-3 text-end control-label col-form-label">Subcategory</label>
@@ -63,7 +63,7 @@
                           <select name="subcategory" class="form-control">
                             <option>--select subcategory--</option>
                             <% subcategory.map((scat)=>{ %>
-                              <option value="<%= scat.id %>"<% if(single.subcategoryId.subcategory== scat.subcategory) { %> selected <% } %> value="<%= scat.id %>"><%= scat.subcategory%></option>
+                              <option value="<%= scat.id %>"<% if(single.subcategoryId.subcategory == scat.subcategory) { %> selected <% } %> value="<%= scat.id %>"><%= scat.subcategory%></option>
                             <% }) %>
                           </select>   
                         </div>
