--- a/PR-8(admin panel)/views/edit_exsubcategory.ejs
+++ b/PR-8(admin panel)/views/edit_exsubcategory.ejs
@@ -43,6 +43,8 @@
             <div class="col-md-6">
               <div class="card">
                 <form class="form-horizontal" method="post" action="/exsubcategory/updateexsubcategory">
+            <input type="hidden" value="<%= single.id %>" name="editid">
+
                   <div class="card-body">
                     <h4 class="card-title">Edit Exsubcategory</h4>
                     <div class="form-group row">
