--- a/PR-8(admin panel)/views/add_exsubcategory.ejs
+++ b/PR-8(admin panel)/views/add_exsubcategory.ejs
@@ -36,7 +36,7 @@
           <div class="alert alert-success" role="alert">
             <%= locals.massage.success %>
           </div>
-        <% } %>
+          <% } %>
 
 
 
@@ -48,26 +48,26 @@
                     <div class="form-group row">
                       <label for="fname" class="col-sm-3 text-end control-label col-form-label">Category</label>
                       <div class="col-sm-9">
-                        <select name="category" class="form-control">
+                        <select onchange="categoryRecord()" id="category" name="category" class="form-control">
                           <option>--select category--</option>
                           <% category.map((ca)=>{ %>
-                            <option value="<%= ca.id %>"><%= ca.category_name %></option>
-                          <% }) %>
-                        </select>   
+                            <option value="<%= ca.id %>">
+                              <%= ca.category_name %>
+                            </option>
+                            <% }) %>
+                        </select>
                       </div>
                     </div>
 
                     <div class="form-group row">
-                        <label for="fname" class="col-sm-3 text-end control-label col-form-label">Subcategory</label>
-                        <div class="col-sm-9">
-                          <select name="subcategory" class="form-control">
-                            <option>--select subcategory--</option>
-                            <% subcategory.map((scat)=>{ %>
-                              <option value="<%= scat.id %>"><%= scat.subcategory %></option>
-                            <% }) %>
-                          </select>   
-                        </div>
+                      <label for="fname" class="col-sm-3 text-end control-label col-form-label">Subcategory</label>
+                      <div class="col-sm-9">
+                        <select id="subcategory" name="subcategory" class="form-control">
+                          <option>--select subcategory--</option>
+
+                        </select>
                       </div>
+                    </div>
 
                     <div class="form-group row">
                       <label for="fname" class="col-sm-3 text-end control-label col-form-label">Exsubcategory</label>
@@ -118,5 +118,34 @@
     <!-- End footer -->
     <!-- ============================================================== -->
   </div>
+
+  <!-- ajax -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+  <script>
+    const categoryRecord = (req, res) => {
+      let catagory = document.getElementById('category').value
+      $.ajax({
+        type: 'GET',
+        url: `/exsubcategory/ajaxsubcategory?id=${catagory}`,
+        success: function (res) {
+          let tbl = ""
+          let category = res.category
+          tbl += `<option value="">--select subcategory--</option>`
+          category.map((subcat) => {
+            console.log(subcat);
+
+            tbl += `
+              <option value=${subcat._id}>${subcat.subcategory}</option>  
+            `
+          })
+          document.getElementById('subcategory').innerHTML = tbl;
+
+        }
+
+      })
+    }
+  </script>
+
 
   <%- include('footer')%>
